# c_webserver

./: CMakeLists.txt  README.md  build.sh  datalogging.c  datalogging.h  debug.h  endpoint.c  endpoint.h  folderlist.c  folderlist.h  httpcodes.h  main.c  main.h  makefile  networkutil.h  networkutils.c  server.c  server.h  severconfig.h  webpage.c  webpage.h  webservice.h
webroot/: index.html  otherpage.html  testendpoints.html  testscripts.js
webroot/falling_game/: game.js  game.js.bak  game.js.new  gamepage.html
webroot/falling_game/sprites/: trump_iddle.json  trump_run.json  trump_walk.json
